[tool.poetry]
name = "aioqzone-feed"
version = "0.13.5.dev0"
description = "aioqzone plugin providing higher level api for processing feed."
authors = ["aioqzone <zzzzss990315@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
homepage = "https://github.com/aioqzone/aioqzone-feed"
repository = "https://github.com/aioqzone/aioqzone-feed"
documentation = "https://aioqzone.github.io/aioqzone-feed"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/aioqzone/aioqzone-feed/issues"

[tool.poetry.dependencies]
python = "^3.8"
aioqzone = [
    { version = "^0.13.0.dev1", allow-prereleases = true },
    { version = "^0.13.0.dev1", allow-prereleases = true, extras = [
        "captcha",
    ], optional = true },
]
exceptiongroup = { version = ">=1.1.1", python = "<3.11" }
lxml = "^4.9.1"

[tool.poetry.extras]
captcha = ["aioqzone"]

# dependency groups
[tool.poetry.group.test]
optional = false

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "~0.21.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
black = "*"
isort = "*"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "^7.0.1"
autodoc-pydantic = "*"
sphinx-autodoc-typehints = "^1.19"
furo = "*"
sphinx-intl = "*"

[[tool.poetry.source]]
name = "aioqzone-index"
url = "https://aioqzone.github.io/aioqzone-index/simple/"
priority = "supplemental"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# customize begin
[tool.pytest.ini_options]
pythonpath = 'src'
log_cli = 1
log_cli_level = 'WARNING'

[tool.isort]
profile = "black"
line_length = 99

[tool.black]
line-length = 99
target-version = ['py38']

[tool.pyright]
pythonVersion = "3.8"
pythonPlatform = "All"
