[metadata]
name = Qzone2TG
version = attr: qzone2tg.VERSION
description = Forward Qzone feeds to telegram
author = JamzumSum
author_email = zzzzss990315@gmail.com
url = https://github.com/JamzumSum/Qzone2TG
license = AGPL-3.0
license_files = LICENSE

[options]
python_requires = >=3.9
install_requires =
    python-telegram-bot[socks]~=13.10
    aioqzone @ git+https://github.com/JamzumSum/aioqzone.git
    QzEmoji @ git+https://github.com/JamzumSum/QzEmoji.git@1.0.2a0

tests_require =
    pytest

packages = find:
package_dir=
    =src
include_package_data = True

[options.packages.find]
where = src
