[metadata]
name = aioqzone-feed
version = attr: aioqzone_feed.VERSION
description = aioqzone plugin for handling feeds
author = JamzumSum
author_email = zzzzss990315@gmail.com
url = https://github.com/JamzumSum/aioqzone-feed
license = AGPL-3.0
license_files = LICENSE

[options]
python_requires = >=3.9
install_requires =
    aioqzone @ git+https://github.com/JamzumSum/aioqzone.git
    QzEmoji @ git+https://github.com/JamzumSum/QzEmoji.git@1.0.2a0

tests_require =
    pytest
    pytest-asyncio
    pytest-timeout

packages = find:
package_dir=
    =src
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
doc=
    sphinx
    autodoc_pydantic
    sphinx-autodoc-typehints
    sphinx_rtd_theme
