[metadata]
name = aioqzone-feed
version = attr: aioqzone_feed.VERSION
description = aioqzone plugin providing higher level api for processing feed
author = JamzumSum
author_email = zzzzss990315@gmail.com
url = https://github.com/JamzumSum/aioqzone-feed
license = AGPL-3.0
license_files = LICENSE

[options]
python_requires = >=3.9
install_requires =
    aioqzone @ git+https://github.com/JamzumSum/aioqzone.git
    QzEmoji @ git+https://github.com/JamzumSum/QzEmoji.git@async

tests_require =
    pytest
    pytest-asyncio
    pytest-timeout

packages = find:
package_dir=
    =src
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
doc=
    sphinx
    autodoc_pydantic
    sphinx-autodoc-typehints
    sphinx_rtd_theme
